--- a/css/nav.css
+++ b/css/nav.css
@@ -21,6 +21,12 @@ footer{
   background-color: var(--cor2);
   border-radius: 29px;
 }
+
+.user:hover{
+  background-color: var(--cor1);
+  border-radius: 29px;
+}
+
 .body-clima {
   display: flex;
   justify-content: center;
@@ -77,12 +83,34 @@ nav > a{
 }
 
 nav > a:hover {
-  background-color: var(--cor2);
-  color: white;
+  color: var(--cor2);
+  text-decoration: underline;
+  text-decoration-color: var(--cor2) ;
+  text-decoration-style: wavy;
+  
 }
+
 
 .logo-container{
   display: flex;
   justify-content: flex-start;
   flex-wrap: nowrap;
+}
+
+.instagram{
+  display: flex;
+  justify-content: center;
+  flex-wrap: nowrap;
+  margin: auto;
+  padding: auto;
+  text-decoration: none;
+}
+
+.instagram > p{
+  margin-left: 2px;
+  margin-top: 10px;
+  color: black;
+}
+a{
+  text-decoration: none;
 }
